--- a/homepage.html
+++ b/homepage.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-<body>
-
-
-<h1> Team 4</h1>
-
-
-<p> hi</p>
-</body>
+<head>
+  <title>Index Page</title>
+</head>
+  <body>
+    <h1>Team Members</h1>
+  </body>
+  </html>
