--- a/homepage.html
+++ b/homepage.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head>  
   <title>Index Page</title>
 </head>
 <body>
-<h1>Team Members</h1>
+<h1>Team Member</h1>
 </body>
 </html>
