--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <title>Index Page</title>
 </head>
 <body>
-<h1>Team Members</h1>
+<h1>Team Members:Divya Addala, Pradhi Waghray, Apoorva Bathula, Nithya Rao, Srishreya S</h1>
 </body>
 </html>
