--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
   <title>Index Page</title>
+  <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
+  
 <h1>Team Members:Divya Addala, Pradhi Waghray, Apoorva Bathula, Nithya Rao, Srishreya S</h1>
 </body>
 </html>
