--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Index Page</title>
-  <link rel="stylesheet" href="mystyle.css">
+<link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
-  
+
 <h1>Team Members:Divya Addala, Pradhi Waghray, Apoorva Bathula, Nithya Rao, Srishreya S</h1>
+<p>This is a paragraph.</p>
+
 </body>
 </html>
