--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head> Team 4
 <link rel="stylesheet" href="team4style.css">
 </head>
 <body>
 
-<h1>Team Members:Divya Addala, Pradhi Waghray, Apoorva Bathula, Nithya Rao, Srishreya S</h1>
-<p>This is a paragraph.</p>
+<p>Team Members: Divya Addala, Pradhi Waghray, Apoorva Bathula, Nithya Rao, Srishreya Srihari<.</p>
 
 </body>
 </html>
