--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head> Team 4
-<link rel="stylesheet" href="team4style.css">
+
+<head> Team 4 Main
+    <link rel="stylesheet" href="team4style.css">
 </head>
+
 <body>
 
 
@@ -21,5 +23,5 @@
     <p>Nithya Rao: Front-end and Back-end developer (5) <p>
             <p>Srishreya: Tech Support and QA Specialist (6)<p>
                     <p>Apoorva: Site Architect (7)<p>
-  
+
 </html>
