--- a/index.html
+++ b/index.html
@@ -17,37 +17,14 @@
 
                         
 <h1>Menu</h1>
-
-
-<div class="div2">Team Page (2)</div>
-
-</body>
+<div class="container"> </div>
+    <div class="div2">Team Page (2)</div>
+    <div class="div2">Divya Addala: Webmaster (3)</div>
+    <div class="div2">Pradhi Waghray: Content Specialist (4)</div>
+    <div class="div2">Nithya Rao: Front-end and Back-end developer (5)</div>
+    <div class="div2">Srishreya: Tech Support and QA Specialist (6)</div>
+    <div class="div2">Apoorva: Site Architect (7)</div>
+</div>
 </html>
-
-<div class="div2">Divya Addala: Webmaster (3)</div>
-
-</body>
-</html>
-
-<div class="div2">Pradhi Waghray: Content Specialist (4)</div>
-
-</body>
-</html>
-
-<div class="div2">Nithya Rao: Front-end and Back-end developer (5)</div>
-
-</body>
-</html>
-
-<div class="div2">Srishreya: Tech Support and QA Specialist (6)</div>
-
-</body>
-</html>
-
-<div class="div2">Apoorva: Site Architect (7)</div>
-
-</body>
-</html>
-
 
 
