--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
                         
 <h1>Menu</h1>
-<div class="container"> </div>
+<div class="container">
     <div class="div2">Team Page (2)</div>
     <div class="div2">Divya Addala: Webmaster (3)</div>
     <div class="div2">Pradhi Waghray: Content Specialist (4)</div>
