--- a/index.html
+++ b/index.html
@@ -6,15 +6,6 @@
 </head>
 
 <body>
-
-
-
-</body>
-<div class="header">
-    <h1>Team 4</h1>
-    <p>Divya Addala, Apoorva Bathula, Nithya Rao, Srishreya Srihari, Pradhi Waghray</p>
-</div>
-
                         
 <h1>Menu</h1>
 <div class="container">
@@ -25,6 +16,13 @@
     <div class="div2">Srishreya: Tech Support and QA Specialist (6)</div>
     <div class="div2">Apoorva: Site Architect (7)</div>
 </div>
+</body>
+<div class="body">
+    <h1>Team 4</h1>
+    <p>Divya Addala, Apoorva Bathula, Nithya Rao, Srishreya Srihari, Pradhi Waghray</p>
+</div>
+
+
 </html>
 
 
