--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
 
 
 
+<html>
+<head>
+<style>
+table, td, th {
+  border: 1px solid black;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th {
+  height: 70px;
+}
+</style>
+</head>
 <body>
 
 <h2>Menu</h2>
@@ -53,6 +70,4 @@
 </table>
 
 </body>
-                        </html>
-                        
-                      
+</html>
