--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+<title>CSS Website Layout</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  margin: 0;
+}
 
-
+/* Style the header */
+.header {
+  background-color: rgb(249, 201, 208);
+  padding: 20px;
+  text-align: center;
+}
+</style>
+</head>
 <body>
 
+<div class="header">
+  <h1>Team 4</h1>
+</div>
 
-
+</body>
+</html>
+                                                                                             
+Team Members: Divya Addala, Apoorva Bathula, Nithya Rao, Srishreya Srihari, Pradhi Waghray
+  
 <html>
 <head>
 <style>
