--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@ Team Members: Divya Addala, Apoorva Bathula, Nithya Rao, Srishreya Srihari, Prad
 table, td, th {
   border: 1px solid black;
 }
+  td {
+  text-align: center;
+}
 
 table {
   border-collapse: collapse;
