--- a/apoorva.html
+++ b/apoorva.html
@@ -14,23 +14,14 @@
       <a  class="mylink" href ="https://www.youtube.com/watch?v=qFfgx-CDBjA&ab_channel=n">My favorite album</a>
     </section>
       <section class="purplesection">
-   <h4 id = "name">I am Apoorva</h4>
+   <h4 id = "name">My name is Apoorva</h4>
    </section>
    <section class="gradesection">
     <p id = "grade"> I'm in 11th grade</p>
       </section>
-      <section class="listsection">
-        <p> If I had to rate my top 3 favorite school subjects, it would be:
-      </section>
-      <section class="olsection">    
-    <ol>
-      <li>Math</li>
-      <li>English</li>
-      <li>Science</li>
-      <ol>
-      </section>
+    
       <section class = "blacksection">
-    <p><b>My</b> <em>age</em> <i>is</i> <u>16</u></p>
+    <p><b>I</b> <em>am</em> <i>16</i> <u>years old</u></p>
     </section>
     <div>
     <section class="descriptionsection">  
