--- a/apoorva.html
+++ b/apoorva.html
@@ -21,7 +21,7 @@
       </section>
     
       <section class = "blacksection">
-    <p><b>I</b> <em>am</em> <i>16</i> <u>years old</u></p>
+    <p>I am 16 years old</p>
     </section>
     <div>
     <section class="descriptionsection">  
