--- a/homepage.html
+++ b/homepage.html
@@ -62,7 +62,7 @@
     
   </tr>
   <tr>
-    <td>Apoorva: Site Architect (7)</td>
+    <td><a href=apoorva.html>Apoorva: Site Architect (7)</td>
     <a href=apoorva.html>
     <td>page 7</td>
   
