--- a/apoorva.html
+++ b/apoorva.html
@@ -29,7 +29,7 @@
    
     
    
-        <a href ="homepage.html">back to team page</a>
+        <a href=homepage.html>back to team page</a>
     </div>
     </section>
     <script src="script.js"></script>
