--- a/index.html
+++ b/index.html
@@ -5,15 +5,41 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
 }
 
 /* Style the header */
 .header {
-  background-color: rgb(249, 201, 208);
+  background-color: #f1f1f1;
   padding: 20px;
   text-align: center;
+}
+
+/* Style the top navigation bar */
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+/* Style the topnav links */
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change color on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
 }
 </style>
 </head>
@@ -23,10 +49,18 @@ body {
   <h1>Team 4</h1>
 </div>
 
+<div class="topnav">
+  <a href="#">Page 1</a>
+  <a href="#">Page 2</a>
+  <a href="#">Page 3</a>
+  <a href="#">Page 4</a>
+  <a href="#">Page 5</a>
+  <a href="#">Page 6</a>
+  <a href="#">Page 7</a>
+</div>
+
 </body>
 </html>
-                                                                                             
-Team Members: Divya Addala, Apoorva Bathula, Nithya Rao, Srishreya Srihari, Pradhi Waghray
   
 <html>
 <head>
