--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {
 .header {
   background-color: #f1f1f1;
   padding: 20px;
-  text-align: center;
+  text-align: center; 
 }
 
 /* Style the top navigation bar */
@@ -81,6 +81,11 @@ table {
 th {
   height: 100px;
 }
+  table.center {
+  margin-left: auto; 
+  margin-right: auto; 
+  }
+  
 </style>
 </head>
 <body>
@@ -90,6 +95,9 @@ th {
 
 <table>
   <tr>
+   }
+ 
+  
 
     <th>Page</th>
     <th>Page Number</th>
