--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
 
 /* Style the header */
 .header {
-  background-color: #f1f1f1;
+  background-color: lightpink;
   padding: 20px;
   text-align: center; 
 }
