--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
 
 /* Style the header */
 .header {
-  background-color: rgb(255, 197, 207);
+  background-color: RGB(255, 197, 207);
   padding: 20px;
   text-align: center; 
 }
