--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ body {
   <a href="#">Page 4</a>
   <a href="#">Page 5</a>
   <a href="#">Page 6</a>
-  <a href="#">Page 8</a>
+  <a href=apoorva.html>Page 7</a>.
 </div>
 
 </body>
