--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ body {
   <a href="#">Page 5</a>
   <a href="#">Page 6</a>
   <a href=apoorva.html>Page 7</a>.
+ <a href="https://www.mozilla.org/en-US/">the Mozilla homepage</a>.
 </div>
 
 </body>
