--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@ body {
 table, td, th {
   border: 1px solid black;
 }
-  td {
-  text-align: center;
+  table. center 
+table {
+    border-collapse: collapse;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
 
-table {
-  border-collapse: collapse;
-  width: 50%;
-}
-table. center {
-  margin-left: auto; 
-  margin-right: auto; 
+
+t 
 }
 </style>
 </head>
