--- a/index.html
+++ b/index.html
@@ -69,34 +69,22 @@ body {
 <head>
 <style>
   
-table, td, th {
+table, th, td {
   border: 1px solid black;
-}
-  table. center 
-table {
-    border-collapse: collapse;
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
+  border-collapse: collapse;
 }
 
-
-t 
+table.center {
+  margin-left: auto;
+  margin-right: auto;
 }
+  
 </style>
 </head>
 <body>
 
-
-
-
 <table class="center">
   <tr>
-   }
- 
-  
-
     <th>Page</th>
     <th>Page Number</th>
   </tr>
