--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@ table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
 }
-
+th{
+  height: 70px;
+  
 table.center {
   margin-left: auto;
   margin-right: auto;
