--- a/divya.html
+++ b/divya.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+img {
+  border-radius: 8px;
+}
+</style>
+</head>
+<body>
 
+<h2>Divya Addala: Webmaster</h2>
+
+
+<img src="DivyaAddala.jpg"  width="300" height="300">
+
+<p>Use the border-radius property to create rounded images:</p>
+
+</body>
+</html>
