--- a/divya.html
+++ b/divya.html
@@ -14,7 +14,7 @@ img {
 
 <img src="DivyaAddala.jpg"  width="300" height="300">
 
-<p>My name is Divya Addala. I am 16 and a junior in high school. I am planning on majoring in finance in the future. I have experience in Java, Python, and CSS.</p>
+<p>My name is Divya Addala and I am the webmaster for Team 4. I am 16 and a junior in high school. I am planning on majoring in finance in the future. I have experience in Java, Python, and CSS.</p>
 
 </body>
 </html>
