--- a/divya.html
+++ b/divya.html
@@ -9,7 +9,7 @@ img {
 </head>
 <body>
 
-<h2>Divya Addala: Webmaster</h2>
+<h2>Divya Addala</h2>
 
 
 <img src="DivyaAddala.jpg"  width="300" height="300">
