--- a/divya.html
+++ b/divya.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <style>
+div.a {
+  font-size: 30px;
+}
   body {
 background-color: rgb(255, 197, 207);
 img {
@@ -11,7 +14,7 @@ img {
 </head>
 <body>
 
-<h2>Divya Addala</h2>
+<div class="a">Divya Addala.</div>
 
 
 <img src="DivyaAddala.jpg"  width="300" height="300">
