--- a/divya.html
+++ b/divya.html
@@ -5,7 +5,10 @@
 div.a {
   font-size: 60px;
 }
-  body {
+div.b {
+  font-size: 50px;
+}
+ 
 background-color: rgb(255, 197, 207);
 img {
   border-radius: 8px;
@@ -14,12 +17,12 @@ img {
 </head>
 <body>
 
-<div class="a">Divya Addala.</div>
+<div class="a">Divya Addala</div>
 
 
 <img src="DivyaAddala.jpg"  width="300" height="300">
 
-<p>My name is Divya Addala and I am the webmaster for Team 4. I am 16 and a junior in high school. I am planning on majoring in finance in the future. I have experience in Java, Python, and CSS.</p>
+<div class="b">My name is Divya Addala and I am the webmaster for Team 4. I am 16 and a junior in high school. I am planning on majoring in finance in the future. I have experience in Java, Python, and CSS.</div>
 
 </body>
 </html>
