--- a/apoorva.html
+++ b/apoorva.html
@@ -1,46 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Apoorva B.</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <img id = "fire" src = "firee.png" style = "border:6px groove black; width: 1320px; height: 1100px">
+<head>
+<style>
+div.a {
+  font-size: 60px;
+}
+div.b {
+  font-size: 50px;
+}
+ 
+background-color: rgb(255, 197, 207);
+img {
+  border-radius: 8px;
+}
+</style>
+</head>
+<body>
 
-  <body id = "body" style="background-color: #573945;">
-    <section class="bluesection">
-    <h3 id ="title"> Welcome to my webpage</h3>
-      <a  class="mylink" href ="https://www.youtube.com/watch?v=qFfgx-CDBjA&ab_channel=n">My favorite album</a>
-    </section>
-      <section class="purplesection">
-   <h4 id = "name">My name is Apoorva</h4>
-   </section>
-   <section class="gradesection">
-    <p id = "grade"> I'm in 11th grade</p>
-      </section>
-    
-      <section class = "blacksection">
-    <p>I am 16 years old</p>
-    </section>
-    <div>
-    <section class="descriptionsection">  
-    <footer> I like playing tennis, thrifting, and listening to music</footer>
-   
-    
-   
-        <a href=homepage.html>back to team page</a>
-    </div>
-    </section>
-    <script src="script.js"></script>
-  </body>
-   <!---<a href=<div id=""></div>"title" ---> 
+<div class="a">Apoorva</div>
+
+
+<img src="DivyaAddala.jpg"  width="300" height="300">
+
+<div class="b">My name is Apoorva Bathula and I am the back end developer for Team 4. I am 16 and a junior in high school. I am planning on majoring in cognitive science in the future. I have experience in Java, Python, and CSS.</div>
+
+</body>
 </html>
-<!---<background-image: url('img_girl.jpg') that is code for inserting images--->
-  <!---backround-color code:<h1 style="background-color:DodgerBlue;">Hello World</h1>--->
-<!--- padding code:padding-(direction specific, if you don't have a speciifc direction,then don't add the hyphen.)
-"Padding:left:40px"(40 is a lot).
-Border stuff:border: 10px
-solid blue"
-to reduce image size do:<img src="img_girl.jpg" alt="Girl in a jacket" width="500" height="600">
-
