--- a/apoorva.html
+++ b/apoorva.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head style="background-color:DodgerBlue;">
 <style>
 div.a {
   font-size: 60px;
@@ -9,7 +9,7 @@ div.b {
   font-size: 50px;
 }
  
-background-color: rgb(255, 197, 207);
+
 img {
   border-radius: 8px;
 }
