--- a/apoorva.html
+++ b/apoorva.html
@@ -4,9 +4,13 @@
 <style>
 div.a {
   font-size: 60px;
+  background-color: DodgerBlue;
+
 }
 div.b {
   font-size: 50px;
+background-color:DodgerBlue;
+
 }
  
 
