--- a/divya.html
+++ b/divya.html
@@ -9,7 +9,9 @@ div.b {
   font-size: 50px;
 }
  
-background-color: rgb(255, 197, 207);
+body {
+    background-color: rgb(255, 197, 207);
+}
 img {
   border-radius: 8px;
 }
