--- a/apoorva.html
+++ b/apoorva.html
@@ -4,12 +4,11 @@
 <style>
 div.a {
   font-size: 60px;
-  background-color: DodgerBlue;
 
 }
 div.b {
   font-size: 50px;
-background-color:DodgerBlue;
+
 
 }
  
@@ -24,7 +23,7 @@ img {
 <div class="a">Apoorva</div>
 
 
-<img src="DivyaAddala.jpg"  width="300" height="300">
+<img src="ApoorvaB.jpg"  width="300" height="300">
 
 <div class="b">My name is Apoorva Bathula and I am the back end developer for Team 4. I am 16 and a junior in high school. I am planning on majoring in cognitive science in the future. I have experience in Java, Python, and CSS.</div>
 
