--- a/apoorva.html
+++ b/apoorva.html
@@ -2,20 +2,22 @@
 <html>
 <head>
 <style>
-div.a {
-  font-size: 60px;
+div style = "background:black">
+  div.a {
+    font-size: 60px;
 
-}
-div.b {
-  font-size: 50px;
+  }
+  div.b {
+    font-size: 50px;
 
 
-}
+  }
  
 
-img {
-  border-radius: 8px;
-}
+  img {
+    border-radius: 8px;
+  }
+  </div>
 </style>
 </head>
 <body>
