--- a/divya.html
+++ b/divya.html
@@ -2,16 +2,14 @@
 <html>
 <head>
 <style>
-body {
-  background-color: background-color: rgb(255, 197, 207);
-}
 div.a {
   font-size: 60px;
 }
 div.b {
   font-size: 50px;
 }
-
+ 
+background-color: rgb(255, 197, 207);
 img {
   border-radius: 8px;
 }
