--- a/apoorva.html
+++ b/apoorva.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head>\
 <style>
 div style = "background:black">
   div.a {
-    font-size: 100px;
+    font-size: 800px;
 
   }
   div.b {
@@ -22,7 +22,7 @@ div style = "background:black">
 </head>
 <body>
 
-<div class="a">Apoorva</div>
+
 
 
 <img src="ApoorvaB.jpg"  width="500" height="500">
