--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ table.center {
    
   </tr>
   <tr>
-    <td>Nithya Rao: Front-end and Back-end developer</td>
+    <td>Nithya Rao: Front-end developer</td>
     <td>Page 4</td>
     
   </tr>
@@ -119,7 +119,7 @@ table.center {
     
   </tr>
   <tr>
-    <td>Apoorva: Site Architect</td>
+    <td>Apoorva: Back-end developer</td>
     <td>Page 6</td>
    
   </tr>
