--- a/nithya.html
+++ b/nithya.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+div.a {
+  font-size: 60px;
+}
+div.b {
+  font-size: 50px;
+}
+ 
+background-color: rgb(255, 197, 207);
+img {
+  border-radius: 8px;
+}
+</style>
+</head>
+<body>
 
+<div class="a">Nithya Rao</div>
+
+
+<img src="DivyaAddala.jpg"  width="300" height="300">
+
+<div class="b">I am Nithya Rao and I am 16. I want to major in Biology. I have some experience in a few basics of Python and CSS.</div>
+
+</body>
+</html>
