--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ body {
    <a href=divya.html>Page 2</a>
   <a href="#">Page 3</a>
   <a href="#">Page 4</a>
-  <a href="#">Page 5</a>
+  <a href=nithya.html>Page 5</a>
   <a href=apoorva.html>Page 6</a>
 </div>
 
