adding descprition Pradhi.html

--- a/Pradhi.html
+++ b/Pradhi.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html>
+<head>\
+<style>
+div style = "background:black">
+  div.a {
+    font-size: 800px;
 
+  }
+  div.b {
+    font-size: 50px;
+
+
+  }
+ 
+
+  img {
+    border-radius: 8px;
+  }
+  </div>
+</style>
+</head>
+<body>
+
+
+
+
+<img src="ApoorvaB.jpg"  width="500" height="500">
+
+<div class="b"> Hi, I’m Pradhi, I’m 16 years old and I want to major in neuroscience. I have experience in HTML, Python, and JavaScript.</div>
+
+</body>
+</html>
