--- a/nithya.html
+++ b/nithya.html
@@ -20,7 +20,7 @@ img {
 <div class="a">Nithya Rao</div>
 
 
-<img src="DivyaAddala.jpg"  width="300" height="300">
+<img src=""  width="300" height="300">
 
 <div class="b">I am Nithya Rao and I am 16. I want to major in Biology. I have some experience in a few basics of Python and CSS.</div>
 
