--- a/nithya.html
+++ b/nithya.html
@@ -19,8 +19,7 @@ img {
 
 <div class="a">Nithya Rao</div>
 
-
-<img src=""  width="300" height="300">
+width="300" height="300">
 
 <div class="b">I am Nithya Rao and I am 16. I want to major in Biology. I have some experience in a few basics of Python and CSS.</div>
 
