--- a/Pradhi.html
+++ b/Pradhi.html
@@ -25,7 +25,7 @@ div style = "background:black">
 
 
 
-<img src="ApoorvaB.jpg"  width="500" height="500">
+<img src="Pradhi.jpg"  width="500" height="500">
 
 <div class="b"> Hi, I’m Pradhi, I’m 16 years old and I want to major in neuroscience. I have experience in HTML, Python, and JavaScript.</div>
 
