--- a/Pradhi.html
+++ b/Pradhi.html
@@ -26,6 +26,8 @@ div style = "background:black">
 
 
 <img src="Pradhi.jpg"  width="1000" height="1000">
+  <div class="a"> Pradhi</div>
+
 
 <div class="b"> Hi, I’m Pradhi, I’m 16 years old and I want to major in neuroscience. I have experience in HTML, Python, and JavaScript.</div>
 
