--- a/srishreya.html
+++ b/srishreya.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+div.a {
+  font-size: 60px;
+}
+div.b {
+  font-size: 50px;
+}
+ 
+background-color: rgb(255, 197, 207);
+img {
+  border-radius: 8px;
+}
+</style>
+</head>
+<body>
 
+<div class="a">Srishreya Srihari</div>
+
+
+  width="300" height="300">
+
+<div class="b">My name is Srishreya, I'm 16. I want to major in neuroscience. I have some experience in coding Java and HTML, and basics of Python.</div>
+
+</body>
+</html>
