Adding pradhi name Pradhi.html

--- a/Pradhi.html
+++ b/Pradhi.html
@@ -1,35 +1,28 @@
 <!DOCTYPE html>
 <html>
-<head>\
+<head>
 <style>
-div style = "background:black">
-  div.a {
-    font-size: 800px;
-
-  }
-  div.b {
-    font-size: 50px;
-
-
-  }
+div.a {
+  font-size: 60px;
+}
+div.b {
+  font-size: 50px;
+}
  
-
-  img {
-    border-radius: 8px;
-  }
-  </div>
+background-color: rgb(255, 197, 207);
+img {
+  border-radius: 8px;
+}
 </style>
 </head>
 <body>
 
-
+<div class="a">Pradhi Waghray</div>
 
 
 <img src="Pradhi.jpg"  width="1000" height="1000">
-  <div class="a"> Pradhi</div>
 
-
-<div class="b"> Hi, I’m Pradhi, I’m 16 years old and I want to major in neuroscience. I have experience in HTML, Python, and JavaScript.</div>
+<div class="b">Hi, I’m Pradhi, I’m 16 years old and I want to major in neuroscience. I have experience in HTML, Python, and JavaScript. </div>
 
 </body>
 </html>
