name update apoorva.html

--- a/apoorva.html
+++ b/apoorva.html
@@ -1,33 +1,28 @@
 <!DOCTYPE html>
 <html>
-<head>\
+<head>
 <style>
-div style = "background:black">
-  div.a {
-    font-size: 800px;
-
-  }
-  div.b {
-    font-size: 50px;
-
-
-  }
+div.a {
+  font-size: 60px;
+}
+div.b {
+  font-size: 50px;
+}
  
-
-  img {
-    border-radius: 8px;
-  }
-  </div>
+background-color: rgb(255, 197, 207);
+img {
+  border-radius: 8px;
+}
 </style>
 </head>
 <body>
 
+<div class="a">Apoorva Bathula</div>
 
 
+<img src="ApoorvaB.jpg"  width="600" height="600">
 
-<img src="ApoorvaB.jpg"  width="500" height="500">
-
-<div class="b">My name is Apoorva Bathula and I am the back end developer for Team 4. I am 16 and a junior in high school. I am planning on majoring in cognitive science in the future. I have experience in Java, Python, and CSS.</div>
+<div class="b">Hi, my name is Apoorva, I’m 16 years old and I really like thrifting. I want to become a cognitive scientist in the future. I know a little bit of Java, python and HTML/CSS. </div>
 
 </body>
 </html>
