--- a/srishreya.html
+++ b/srishreya.html
@@ -20,7 +20,7 @@ img {
 <div class="a">Srishreya Srihari</div>
 
 
-  width="300" height="300">
+  <img src = width="300" height="300">
 
 <div class="b">My name is Srishreya, I'm 16. I want to major in neuroscience. I have some experience in coding Java and HTML, and basics of Python.</div>
 
