--- a/srishreya.html
+++ b/srishreya.html
@@ -19,8 +19,7 @@ img {
 
 <div class="a">Srishreya Srihari</div>
 
-
-  <img src = width="300" height="300">
+<img src="SrishreyaSrihari.jpg"  width="600" height="600">
 
 <div class="b">My name is Srishreya, I'm 16. I want to major in neuroscience. I have some experience in coding Java and HTML, and basics of Python.</div>
 
