--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body {
 
 <div class="header">
   <h1>Team 4</h1>
-  <p> Team Members: Divya Addala, Pradhi Waghray, Apoorva Bathula, SriShreya Srihari</p>
+  <p> Team Members: Divya Addala, Pradhi Waghray, Apoorva Bathula, Srishreya Srihari. Nithya Rao</p>
 </div>
 
 <div class="topnav">
