--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body {
 <body>
 
 <div class="header">
-  <h1>Team 4</h1>
+  <h1>Team wolverines </h1>
   <p> Team Members: Divya Addala, Pradhi Waghray, Apoorva Bathula, Srishreya Srihari, Nithya Rao</p>
 </div>
 
