--- a/index.html
+++ b/index.html
@@ -123,6 +123,18 @@ table.center {
   <tr>
     <td>Apoorva: Back-end developer</td>
     <td>Page 6</td>
+
+  </tr>
+  <tr>
+    <td>Login page</td>
+    <td>Page 7</td>
+
+  </tr>
+  <tr>
+    <td>projects</td>
+    <td>Page 8</td>
+   
+   
    
   </tr>
 </table>
