--- a/alice.html
+++ b/alice.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+a {
+  color: blue;
+}
+</style>
+</head>
+<body>
 
+<h2>Current Projects</h2>
+
+<p><b><a href="soccer game.a3p" target="_blank">ALICE soccer game</a></b></p>
+
+</body>
+</html>
