--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ body {
   <a href=srishreya.html>Page 5</a>
   <a href=apoorva.html>Page 6</a>
   <a href=login.html>Page 7</a>
+  <a href=alice.html>Page 8</a>
   
 </div>
 
