--- a/code.html
+++ b/code.html
@@ -183,3 +183,213 @@
         </div>
     </body>
 </html>
+
+
+/// @font-face {
+    font-family: PTS;
+    src: url(font.ttf);
+}
+:root{
+    --default:#82589f;
+    --button:#997bb1;
+    --buttonhover:#461e62;
+    --textdark:#461e62;
+    --textlight:white;
+    --accent: #461e62;
+    --shadow: rgba(0,0,0,0.2);
+}
+html{
+    scroll-padding-top: 90px;
+    scroll-behavior: smooth;
+}
+body{
+    font:12px PTS, sans-serif;
+    font-weight: 600;
+    letter-spacing: 2px;
+    margin: 0px;
+}
+header#top{
+    position:sticky;
+    top:0px;
+    background: var(--default);
+    height: 80px;
+    text-align: center;
+    border-bottom: 3px solid var(--accent);
+    }
+#code_icon{
+    height:80px;
+    padding-left:20px;
+    float:left;
+    }
+nav{
+    height:inherit;
+    }
+nav ul{
+    white-space:nowrap;
+    margin:0;
+    padding:0;
+    }
+nav ul li{
+    display:inline-block;
+    margin: 20px;
+    }
+nav .drop{
+    display: inline-block;
+    position: relative;
+}
+nav .dropstuff{
+    display: none;
+    position: absolute;
+    background-color: var(--default);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px var(--shadow);
+    z-index: 1;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    border: var(--accent) 3px solid;
+}
+nav .dropstuff li{
+    display: block;
+    margin: 10px;
+}
+nav .dropstuff li a{
+    padding: 0px 10px;
+    font-size: 20px;
+}
+.drop:hover .dropstuff {
+    display: block;
+}
+nav ul li a{
+    font-size:30px;
+    color:var(--textlight);
+    text-align:center;
+    padding:8px 16px;
+    text-decoration:none;
+    border-radius: 25px;
+    border: none;
+    font-family: PTS, sans-serif;
+    font-weight: 600;
+    letter-spacing: 2px;
+    }
+nav ul li #button{
+    padding:2px 16px;
+    border-radius:40px;
+    background: var(--button);
+    cursor: pointer;
+}
+nav ul li a:hover, #button:hover{
+    background: var(--buttonhover);
+}
+header.title{
+    margin:20px;
+}
+h1.title{
+    font-size:75px;
+    text-align:center;
+    text-transform: uppercase;
+    margin:0px;
+    color:var(--textdark);
+    font-weight: 1000;
+}
+h2.title{
+    font-size:50px;
+    text-align:center;
+    margin:0px;
+    margin-block: 0px;
+    margin-inline: 0px;
+    color:var(--textdark);
+}
+div#team{
+    text-align:center;
+}
+div#team section{
+    width: 200px;
+    text-align:center;
+    display:inline-block;
+    padding:5px;
+}
+div#team article{
+    display:block;
+    padding:10px;
+    border-radius: 20px;
+    font-size:20px;
+    height: auto;
+    margin: 0px;
+    text-align: center;
+    width:auto;
+}
+div#team img{
+    margin:auto;
+    margin-top: 10px;
+    width:100px;
+    display:block;
+    width: 100px;
+    height: 100px;
+    border-radius: 20px;
+    object-fit: cover;
+}
+.holder{
+    display: grid;
+    align-items: center;
+}
+div#team .name.holder{
+    height:70px;
+}
+div#team h1.name{
+    font-size:20px;
+    font-weight:bold;
+    margin:auto;
+}
+div#team .desc.holder{
+    height:110px;
+    padding-bottom: 10px;
+    display:flex;
+    justify-content: center;
+}
+.desc{
+    font-size:15px;
+    font-weight: initial;
+    margin:0px;
+    padding:0px;
+}
+div#team a.goto{
+    border-radius:40px;
+    background: var(--button);
+    color:var(--textlight);
+    text-align:center;
+    text-decoration:none;
+    padding: 5px 10px;
+}
+div#team a.goto:hover{
+    background: var(--textdark);
+}
+div#team article::after{
+    content: "";
+    display:block;
+    height: 10px;
+}
+article{
+    background: var(--default);
+    margin: 10px auto;
+    border-radius: 25px;
+    color:var(--textlight);
+    text-align: left;
+    padding:25px;
+    font-weight: initial;
+    width:70%;
+}
+article h1{    
+    font-size: 40px;
+    margin:0px;
+    font-weight: 600;
+}
+article li{
+    list-style-type:"- ";
+    font-size:25px;
+    font-weight: initial;
+}
+.test{
+    display:none !important;
+} 
+//// this is for style css
