--- a/login.html
+++ b/login.html
@@ -3,7 +3,9 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body {font-family: Arial, Helvetica, sans-serif;}
+body {
+  background-color: lightpink;
+}
 
 /* Full-width input fields */
 input[type=text], input[type=password] {
