--- a/login.html
+++ b/login.html
@@ -162,18 +162,17 @@ span.psw {
 </div>
 
 <script>
-    const passwordInput = document.getElementById("login-password");
-        const passwordToggle = document.getElementById("password-toggle");
-
-        passwordToggle.addEventListener("click", () => {
-            if (passwordInput.type === "password") {
-                passwordInput.type = "text";
-                passwordToggle.classList.remove("fa-eye");
-                passwordToggle.classList.add("fa-eye-slash");
-            } else {
-                passwordInput.type = "password";
-                passwordToggle.classList.remove("fa-eye-slash");
-                passwordToggle.classList.add("fa-eye");
+const passwordInput = document.getElementById("login-password");
+const passwordToggle = document.getElementById("password-toggle");
+passwordToggle.addEventListener("click", () => {
+  if (passwordInput.type === "password") {
+    passwordInput.type = "text";
+    passwordToggle.classList.remove("fa-eye");
+    passwordToggle.classList.add("fa-eye-slash");
+  } else {
+    passwordInput.type = "password";
+    passwordToggle.classList.remove("fa-eye-slash");
+    passwordToggle.classList.add("fa-eye");
             }
         });
 
@@ -181,18 +180,27 @@ span.psw {
             event.preventDefault();
             const username = document.getElementById("login-username").value;
             const password = document.getElementById("login-password").value;
-
-            if (username && password) {
-                // Replace this with your login logic
-                // For this example, we'll simply show a success message
-                document.getElementById("message").innerText = "Login successful!";
-                document.getElementById("message").classList.add("success");
-            } else {
-                document.getElementById("message").innerText = "Please fill in all fields.";
-                document.getElementById("message").classList.remove("success");
+ if (username && password) {
+   document.getElementById("message").innerText = "Login successful!";
+   document.getElementById("message").classList.add("success");
+ } else {
+   document.getElementById("message").innerText = "Please fill in all fields.";
+   document.getElementById("message").classList.remove("success");
             }
         });
+const paragraph = document.getElementById("edit");
+const edit_button = document.getElementById("edit-button");
+const end_button = document.getElementById("end-editing");
 
+edit_button.addEventListener("click", function() {
+  paragraph.contentEditable = true;
+  paragraph.style.backgroundColor = "#dddbdb";
+} );
+
+end_button.addEventListener("click", function() {
+  paragraph.contentEditable = false;
+  paragraph.style.backgroundColor = "#ffe44d";
+} )
 </script>
 
 </body>
