--- a/apoorva.html
+++ b/apoorva.html
@@ -25,7 +25,7 @@ img {
 
 <img src="ApoorvaB.jpg"  width="600" height="600">
 
-<div class="b">Hi, my name is Apoorva, I’m 16 years old and I really like thrifting. I want to become a cognitive scientist in the future. I know a little bit of Java, python and HTML/CSS. </div>
+<div class="b">Hi, my name is Apoorva, I am 16 years old and I really like thrifting. I want to become a cognitive scientist in the future. I know a little bit of Java, python and HTML/CSS. </div>
 
 </body>
 </html>
