--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
 
 <div class="container">
     <h2>Login</h2>
-    <form action="dashboard.html" method="post">
+    <form action="authenticate.php" method="post">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required>
 
