--- a/Pradhi.html
+++ b/Pradhi.html
@@ -25,7 +25,7 @@ img {
 
 <img src="Pradhi.jpg"  width="300" height="300">
 
-<div class="b">Hi, my name is Pradhi, I am 16 years old and I want to major in neuroscience. I have experience in HTML, Python, and JavaScript. </div>
+<div class="b" contenteditable="true">Hi, my name is Pradhi, I am 16 years old and I want to major in neuroscience. I have experience in HTML, Python, and JavaScript. </div>
 
 </body>
 </html>
