--- a/divya.html
+++ b/divya.html
@@ -25,7 +25,7 @@ img {
 
 <img src="DivyaAddala.jpg"  width="300" height="300">
 
-<div class="b">My name is Divya Addala and I am the webmaster for Team 4. I am 16 and a junior in high school. I am planning on majoring in finance in the future. I have experience in Java, Python, and CSS.</div>
+<div class="b" contenteditable="true">My name is Divya Addala and I am the webmaster for Team 4. I am 16 and a junior in high school. I am planning on majoring in finance in the future. I have experience in Java, Python, and CSS.</div>
 
 </body>
 </html>
