--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@ body {
 </head>
 <body>
 
-<div class="header">
+<div class="header" contenteditable="true">
   <h1>Team wolverines </h1>
   <p> Team Members: Divya Addala, Pradhi Waghray, Apoorva Bathula, Srishreya Srihari, Nithya Rao</p>
 </div>
 
-<div class="topnav">
+<div class="topnav" contenteditable="true">
   <a href="#">Page 1</a>
   <a href=divya.html>Page 2</a>
   <a href=Pradhi.html>Page 3</a>
@@ -95,7 +95,7 @@ table.center {
 </head>
 <body>
 
-<table class="center">
+<table class="center" contenteditable="true">
   <tr>
     <th>Page</th>
     <th>Page Number</th>
