--- a/nithya.html
+++ b/nithya.html
@@ -24,7 +24,7 @@ img {
 
 <img src="IMG-1557.jpg"  width="300" height="300">
 
-<div class="b">I am Nithya Rao and I am 16. I want to major in Biology. I have some experience in a few basics of Python and CSS.</div>
+<div class="b" contenteditable="true">I am Nithya Rao and I am 16. I want to major in Biology. I have some experience in a few basics of Python and CSS.</div>
 
 </body>
 </html>
