--- a/srishreya.html
+++ b/srishreya.html
@@ -24,7 +24,7 @@ img {
 
 <img src="SrishreyaSrihari.jpg"  width="200" height="250">
 
-<div class="b">My name is Srishreya, I'm 16. I want to major in neuroscience. I have some experience in coding Java and HTML, and basics of Python.</div>
+<div class="b" contenteditable="true">My name is Srishreya, I'm 16. I want to major in neuroscience. I have some experience in coding Java and HTML, and basics of Python.</div>
 
 </body>
 </html>
