--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ body {
   <a href=nithya.html>Page 4</a>
   <a href=srishreya.html>Page 5</a>
   <a href=apoorva.html>Page 6</a>
-  <a href=login.php>Page 7</a>
+  <a href=login.html>Page 7</a>
   <a href=alice.html>Page 8</a>
   
 </div>
