--- a/alice.html
+++ b/alice.html
@@ -14,7 +14,7 @@ a {
 
 <h2>Current Projects</h2>
 
-<p><b><a href="save20231206_092720.a3p" target="_blank">ALICE soccer game</a></b></p>
+<p><b><a href="save20231206_092720.a3p" target="_blank"></a></b></p>
 <p><b><a href="main.html" target="_blank">Alien game</a></b></p>
 </body>
 </html>
