--- a/divya.html
+++ b/divya.html
@@ -25,7 +25,8 @@ img {
 
 <img src="DivyaAddala.jpg"  width="300" height="300">
 
-<div class="b" contenteditable="true">My name is Divya Addala and I am the webmaster for Team 4. I am 16 and a junior in high school. I am planning on majoring in finance in the future. I have experience in Java, Python, and CSS.</div>
+<div class="b" contenteditable="true">My name is Divya Addala and I am the webmaster for Team 4. I am 16 and a junior in high school. I am planning on majoring in finance in the future. I have experience in Java, Python, and CSS.
+This semester, I contributed to our group by creating the navigation bar for our website and creating the home page. I also desgined the intial storyboard  and created my personal page. Designing my website taught me how to format using css and html. For our projects, I also came up with the concept of creating a soccer game on ALICE. I added the "true or false" questions. For our next game called "pong", I used JAVA script and HTML to help create the code. I gained more experience with JAVA Script in this process. div>
 
 </body>
 </html>
