--- a/apoorva.html
+++ b/apoorva.html
@@ -25,7 +25,7 @@ img {
 
 <img src="ApoorvaB.jpg"  width="600" height="600">
 
-<div class="b" contenteditable="true">Hi, my name is Apoorva, I am 16 years old and I really like thrifting. I want to become a cognitive scientist in the future. I know a little bit of Java, python and HTML/CSS. </div>
+<div class="b" contenteditable="true">Hi, my name is Apoorva, I am 16 years old and I really like thrifting. I want to become a cognitive scientist in the future. I know a little bit of Java, python and HTML/CSS. This semester, I created the login page and my individual page for our project. I also formatted the website the make sure everything was centered and added color to make it more aesthetic. I learned how to use code to design pages in this process, as I helped make the website more visually appealing. For our ALICE game, I added the "true or false" questions the game player is asked. I also created the background story for the game that appears in the very beggining. In the next game, called "pong", I helped code by using my knowledge on HTML and JAVA script. This helped me get more comfortable using these languages.   </div>
 
 </body>
 </html>
