--- a/alice.html
+++ b/alice.html
@@ -15,6 +15,6 @@ a {
 <h2>Current Projects</h2>
 
 <p><b><a href="save20231206_092720.a3p" target="_blank"></a></b></p>
-<p><b><a href="main.html" target="_blank">Alien game</a></b></p>
+<p><b><a href="https://team4-pong-game.apoorvab1.repl.co/" target="_blank">Pong Game</a></b></p>
 </body>
 </html>
