--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,6 @@ a {
 <h2>Current Projects</h2>
 
 <p><b><a href="save20231206_092720.a3p" target="_blank">ALICE soccer game</a></b></p>
-<p><b><a href="https://replit.com/@ApoorvaB1/team4-pong-game" target="_blank">Pong game</a></b></p>
+<p><b><a href="replit.html" target="_blank">Pong game</a></b></p>
 </body>
 </html>
