--- a/projects.html
+++ b/projects.html
@@ -16,5 +16,6 @@ a {
 
 <p><b><a href="save20231206_092720.a3p" target="_blank">ALICE soccer game</a></b></p>
 <p><b><a href="replit.html" target="_blank">Pong game</a></b></p>
+<p><b><a href="https://www.canva.com/design/DAF7qWOlrhw/p-MnJhJ0qEMF0wRR9n5GIw/edit?utm_content=DAF7qWOlrhw&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">NEURAL NETWORKING AI</a></b></p>
 </body>
 </html>
